some issues fixed to task reqiurements
