# docs/swagger.yaml
@@ -6,10 +6,10 @@ definitions:
         type: string
       id:
         type: integer
-      name:
-        type: string
       price:
         type: integer
+      service_name:
+        type: string
       start_date:
         type: string
       user_id:
@@ -21,10 +21,10 @@ definitions:
         type: string
       id:
         type: integer
-      name:
-        type: string
       price:
         type: integer
+      service_name:
+        type: string
       start_date:
         type: string
       user_id:
