# internal/entities/models.go
@@ -8,7 +8,7 @@ import (
 
 type Subscription struct {
 	ID        int        `json:"id" db:"id"`
-	Name      string     `json:"name" db:"name"`
+	Name      string     `json:"service_name" db:"name"`
 	Price     int        `json:"price" db:"price"`
 	UserID    uuid.UUID  `json:"user_id" db:"user_id"`
 	StartDate time.Time  `json:"start_date" db:"start_date"`
@@ -17,7 +17,7 @@ type Subscription struct {
 
 type FrontendSubscription struct {
 	ID        int    `json:"id" db:"id"`
-	Name      string `json:"name" db:"name"`
+	Name      string `json:"service_name" db:"name"`
 	Price     int    `json:"price" db:"price"`
 	UserID    string `json:"user_id" db:"user_id"`
 	StartDate string `json:"start_date" db:"start_date"`
